Fixed z-index to display mapbox UI under the menu overlay

--- a/client/stylesheets/partials/_variables.scss
+++ b/client/stylesheets/partials/_variables.scss
@@ -11,8 +11,8 @@ $primary-font: 'PT Sans', sans-serif;
 
 // z-index
 
-$content-zindex: 1;
-$layer-nav-zindex: 2;
-$nav-zindex: 3;
-$layer-content-zindex: 4;
-$trigger-zindex: 5;
+$content-zindex: 1001;
+$layer-nav-zindex: 2000;
+$nav-zindex: 3000;
+$layer-content-zindex: 4000;
+$trigger-zindex: 5000;
