--- a/client/stylesheets/style.scss
+++ b/client/stylesheets/style.scss
@@ -332,7 +332,3 @@ header {
 	}
 
 }
-
-.leaflet-bottom, .leaflet-top {
-	z-index: 2;
-}
